# fastkmeans-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  publish.yml
benches/: plot_benchmark.py
docs/: compare_reference.py
examples/: basic.rs  bench_flash.rs  bench_flash_memory.rs  bench_train_predict.rs  cuda_benchmark.rs
scripts/: pre-commit
src/: algorithm.rs  cuda.rs  distance.rs  kmeans.rs  lib.rs  metal_gpu.rs
tests/: cuda_tests.rs  integration_tests.rs
