[package]
name = "fastkmeans-rs"
version = "0.1.0"
edition = "2021"
description = "A fast and efficient k-means clustering implementation in Rust, compatible with ndarray"
license = "Apache-2.0"
keywords = ["kmeans", "clustering", "machine-learning", "ndarray"]
categories = ["science", "algorithms"]

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
ndarray-rand = "0.15"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
num-traits = "0.2"
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[[bench]]
name = "kmeans_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
